prevent html scroll on mobile

--- a/v3/src/assets/main.css
+++ b/v3/src/assets/main.css
@@ -53,3 +53,9 @@ body {
 #app {
   overflow: hidden;
 }
+
+@media (max-width: 900px) {
+  html {
+    overflow: hidden;
+  }
+}
